--- a/index.html
+++ b/index.html
@@ -1,2 +1,8 @@
-Hello World
-<a href="About.html">About</a>
+<html>
+    <body>
+        <p>
+            Hello World
+            <a href="About.html">About</a>
+        </p>
+    </body>
+</html>
