--- a/About.html
+++ b/About.html
@@ -32,25 +32,21 @@
         
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://localhost:8080/ssc/">SitStayCreate</a>
+            <a class="navbar-brand" href="https://sitstaycreate.github.io/">SitStayCreate</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/about">About</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/documentation/midiosc">midiosc</a>
+                        <a class="nav-link" href="Midiosc.html">midiosc</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/documentation">Max projects</a>
-                    </li>
-                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;links&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/links">Links</a>
+                        <a class="nav-link" href="Max.html">Max projects</a>
                     </li>
                 </ul>
             </div>
@@ -59,7 +55,7 @@
         
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white">
-                <li class="breadcrumb-item" aria-current="page"><a href="http://localhost:8080/ssc">Home</a></li>
+                <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
                 <li class="breadcrumb-item active" aria-current="page">About</li>
             </ol>
         </nav>
