--- a/Max.html
+++ b/Max.html
@@ -73,7 +73,7 @@
                         <div class="text-center mb-3">
                             <h4>Max Intro</h4>
                         </div>
-                        <a href="http://localhost:8080/ssc/documentation/maxintro">
+                        <a href="Max.html">
                             <img src="./Docs_files/max_intro.png" class="max-carousel-image img-fluid d-block mx-auto" alt="First slide">
                         </a>
                         <div class="text-center mt-3">
@@ -84,7 +84,7 @@
                         <div class="text-center  mb-3">
                             <h4>LiveClip</h4>
                         </div>
-                        <a href="http://localhost:8080/ssc/documentation/liveclip">
+                        <a href="LiveClip.html">
                             <img src="./Docs_files/liveclip.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
@@ -95,7 +95,7 @@
                         <div class="text-center  mb-3">
                             <h4>Chordophone</h4>
                         </div>
-                        <a href="http://localhost:8080/ssc/documentation/chordophone">
+                        <a href="Chordophone.html">
                             <img src="./Docs_files/chordophone.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
@@ -106,7 +106,7 @@
                         <div class="text-center  mb-3">
                             <h4>Diatonic pads</h4>
                         </div>
-                        <a href="http://localhost:8080/ssc/documentation/diatonicpads">
+                        <a href="DiatonicPads.html">
                             <img src="./Docs_files/Diatonic-pads.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Third slide">
                         </a>
                         <div class="text-center mt-3">
@@ -114,11 +114,11 @@
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="http://localhost:8080/ssc_website/documentation#max-carousel" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#max-carousel" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="http://localhost:8080/ssc_website/documentation#max-carousel" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#max-carousel" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
