--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <body>
         <p>
-            Hello World
+            Welcome
             <a href="About.html">About</a>
         </p>
     </body>
