--- a/Midiosc.html
+++ b/Midiosc.html
@@ -1,5 +1,4 @@
 
-<!-- saved from url=(0055)http://localhost:8080/ssc_website/documentation/midiosc -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -19,16 +18,11 @@
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-        
+        <script src="https://player.vimeo.com/api/player.js"></script>
 
         <title>SitStayCreate</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./Midiosc_files/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
         <link rel="stylesheet" href="./Midiosc_files/style.css">
-        <script src="./Midiosc_files/jquery.min.js.download"></script>
-        <script src="./Midiosc_files/jquery-3.4.1.slim.min.js.download" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-        <script src="./Midiosc_files/popper.min.js.download" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="./Midiosc_files/bootstrap.min.js.download" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     </head>
 
     <body>
@@ -67,11 +61,8 @@
                 <h1 class="display-4 text-center">Midiosc</h1>
             </div>
             <div class="card-body">
-                <div class="mx-5 mb-3">
-                    <div style="padding:62.5% 0 0 0;position:relative;">
-                        <iframe src="./Midiosc_files/572275423.html" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="midiosc1.1.0-demo.mov"></iframe>
-                    </div>
-                    <script src="./Midiosc_files/player.js(1).download"></script>
+                <div style="padding:62.5% 0 0 0;position:relative;">
+                    <iframe src="https://player.vimeo.com/video/572275423?h=5833fc89f4&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="midiosc1.1.0-demo.mov"></iframe>
                 </div>
                 <h3 class="text-center">A Monome OSC server for midi devices</h3>
                 <p>
@@ -174,20 +165,5 @@
                 </p>
             </div>
         </div>
-
-        
-
-        <footer class="bg-dark text-light fixed-bottom">
-            <div class="container">
-                <p>
-                </p><div class="row justify-content-center">
-                    <div class="col-4 text-center">
-                        <small>contact:</small>
-                        <a href="https://www.github.com/sitstaycreate"><i class="fa fa-github-alt"></i></a>
-                    </div>
-                </div>
-                <p></p>
-            </div>
-        </footer>
     </body>
 </html>
