--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
 <html>
-    <body>
-        <p>
-            Welcome
-            <a href="About.html">About</a>
-        </p>
-    </body>
+    <meta http-equiv="refresh" content="0; url='About.html'" />
 </html>
