Update DRD-01 link paths

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <li class="breadcrumb-item active" aria-current="page">Midiosc</li>
         </ol>
     </nav>
-    
+
     <div class="mx-5">
         <h1 class="display-4 text-center">SitStayCreate - <small>DRD-01</small></h1>
     </div>
@@ -478,7 +478,7 @@
             </div>
         </div>
     </div>
-    <script src="drd01.js"></script>
-    <link rel="stylesheet" href="DRD-01.css">
+    <script src="./DRD-01_files/drd01.js"></script>
+    <link rel="stylesheet" href="./DRD-01_files/DRD-01.css">
 </body>
 </html>
