Fix link in Max.html

--- a/Max.html
+++ b/Max.html
@@ -73,7 +73,7 @@
                         <div class="text-center mb-3">
                             <h4>Max Intro</h4>
                         </div>
-                        <a href="Max+Intro.html">
+                        <a href="Max_Intro.html">
                             <img src="./Docs_files/max_intro.png" class="max-carousel-image img-fluid d-block mx-auto" alt="First slide">
                         </a>
                         <div class="text-center mt-3">
