--- a/Max.html
+++ b/Max.html
@@ -1,9 +1,7 @@
-
-<!-- saved from url=(0047)http://localhost:8080/ssc_website/documentation -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <title>Docs</title>
+        <title>Max Projects</title>
         
 
 
@@ -52,7 +50,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb bg-white">
                 <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Docs</li>
+                <li class="breadcrumb-item active" aria-current="page">Max Projects</li>
             </ol>
         </nav>
         <div class=" text-light mx-5">
