--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!-- dist/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,7 +13,7 @@
 
         gtag('config', 'UA-194353784-1');
     </script>
-    
+
     <title>Tone.js with webpack</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -46,8 +45,7 @@
     
     <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-white">
-            <li class="breadcrumb-item" aria-current="page"><a href="https://sitstaycreate.github.io/">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Midiosc</li>
+            <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
     </nav>
 
