Change static file structure to match framework structure

--- a/Chordophone.html
+++ b/Chordophone.html
@@ -21,7 +21,7 @@
         <title>SitStayCreate</title>
 
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./static/css/style.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -60,7 +60,7 @@
             <div class="card-body">
                 <h3 class="text-center">Intro</h3>
                 <div class="my-3">
-                    <img src="./Chordophone_files/chordophone.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/Chordophone/chordophone.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
                     This patch is to be used with a Monome Grid, specifically one with 128 buttons oriented horizontally. If you do
@@ -74,7 +74,7 @@
                     somewhere closer to a chord organ.
                 </p>
                 <div class="my-3">
-                    <img src="./Chordophone_files/grid.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/Chordophone/grid.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
                     The top row provides global functionality and tunes the two instruments to a note (buttons [0 0]-[11 0] A-G#) and
