--- a/LiveClip.html
+++ b/LiveClip.html
@@ -23,7 +23,7 @@
 
         <title>SitStayCreate</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./static/css/style.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -80,7 +80,7 @@
                     with your mouse with midiosc v1.1.0.
                 </p>
                 <div class="my-3">
-                    <img src="./LiveClip_files/liveclip.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/LiveClip/liveclip.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <h3 class="text-center">Instructions</h3>
                 <p>
@@ -89,7 +89,7 @@
                 </p>
                 <h5 class="text-center">Note Mode</h5>
                 <div class="my-3">
-                    <img src="./LiveClip_files/notemode.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/LiveClip/notemode.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
                     The default mode is note mode. Buttons [0 0] - [15 0] display the playhead of the clip as a blinking light. Pressing one of these buttons
@@ -98,7 +98,7 @@
                 </p>
                 <h5 class="text-center">Velo Mode</h5>
                 <div class="my-3">
-                    <img src="./LiveClip_files/velomode.png" class="home-card-image img-fluid d-block mx-auto">
+                    <img src="./static/images/LiveClip/velomode.png" class="home-card-image img-fluid d-block mx-auto">
                 </div>
                 <p>
                     Once in velo mode the blinking light will disappear, the selected column will be lit and the selected velocity will be brightly lit.
