--- a/Max.html
+++ b/Max.html
@@ -22,7 +22,7 @@
 
         <title>SitStayCreate</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./static/css/style.css">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -70,7 +70,7 @@
                             <h4>Max Intro</h4>
                         </div>
                         <a href="Max_Intro.html">
-                            <img src="./Docs_files/max_intro.png" class="max-carousel-image img-fluid d-block mx-auto" alt="First slide">
+                            <img src="./static/images/Max/max_intro.png" class="max-carousel-image img-fluid d-block mx-auto" alt="First slide">
                         </a>
                         <div class="text-center mt-3">
                             <p>Get some context before you begin and watch a synthesizer be programmed in 58 seconds</p>
@@ -81,7 +81,7 @@
                             <h4>LiveClip</h4>
                         </div>
                         <a href="LiveClip.html">
-                            <img src="./Docs_files/liveclip.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
+                            <img src="./static/images/Max/liveclip.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
                             <p>Minimalist abstraction of an Ableton Live Clip for the Monome Grid</p>
@@ -92,7 +92,7 @@
                             <h4>Chordophone</h4>
                         </div>
                         <a href="Chordophone.html">
-                            <img src="./Docs_files/chordophone.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
+                            <img src="./static/images/Max/chordophone.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Second slide">
                         </a>
                         <div class="text-center mt-3">
                             <p>A chordophone inspired instrument for the Monome Grid.</p>
@@ -103,7 +103,7 @@
                             <h4>Diatonic pads</h4>
                         </div>
                         <a href="DiatonicPads.html">
-                            <img src="./Docs_files/Diatonic-pads.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Third slide">
+                            <img src="./static/images/Max/Diatonic-pads.png" class="max-carousel-image img-fluid d-block mx-auto" alt="Third slide">
                         </a>
                         <div class="text-center mt-3">
                             <p>A Max 7 patch for a 4x4 drum pad (mpc-style) MIDI controller.</p>
