--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
             </div>
         </div>
     </div>
-    <script src="./DRD-01_files/drd01.js"></script>
-    <link rel="stylesheet" href="./DRD-01_files/DRD-01.css">
+    <script src="./static/javascript/DRD-01/drd01.js"></script>
+    <link rel="stylesheet" href="./static/css/DRD-01/DRD-01.css">
 </body>
 </html>
