--- a/About.html
+++ b/About.html
@@ -1,5 +1,4 @@
 
-<!-- saved from url=(0039)http://localhost:8080/ssc_website/about -->
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -8,7 +7,7 @@
 
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script type="text/javascript" async="" src="./About_files/analytics.js.download"></script><script async="" src="./About_files/js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-194353784-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
@@ -16,8 +15,6 @@
 
             gtag('config', 'UA-194353784-1');
         </script>
-        <script src="./About_files/jquery.min.js.download"></script>
-        <script src="./About_files/jquery-3.4.1.slim.min.js.download" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script><script src="./About_files/popper.min.js.download" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -25,8 +22,7 @@
 
         <title>SitStayCreate</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link rel="stylesheet" href="./About_files/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-        <link rel="stylesheet" href="./About_files/style.css">
+        <link rel="stylesheet" href="./static/css/style.css">
     </head>
     <body>
         
@@ -59,40 +55,23 @@
                 <li class="breadcrumb-item active" aria-current="page">About</li>
             </ol>
         </nav>
-    <div class="card mx-5 mb-5">
-        <div class="card-header text-center bg-dark text-light">
-            <h1 class="display-4">About</h1>
-        </div>
-        <div class="card-body justify-content-center">
-            <div class="my-3">
-                <p>
-                    SitStayCreate is an imperative to make something. At the intersection of diy audio and open-source software communities,
-                    it is a place to imagine not how things are, but how they might be.
-                </p>
-                <p>
-                    SitStayCreate was first envisioned in Austin, TX in 2018. We believe the average person has more than they need to
-                    make interesting instruments and compelling recordings at home. We hope to encourage others to explore the development of their
-                    own electronic instruments by sharing our projects.
-                </p>
+        <div class="card mx-5 mb-5">
+            <div class="card-header text-center bg-dark text-light">
+                <h1 class="display-4">About</h1>
             </div>
-        </div>
-    </div>
-
-
-
-    <footer class="bg-dark text-light fixed-bottom">
-        <div class="container">
-            <p>
-            </p><div class="row justify-content-center">
-                <div class="col-4 text-center">
-                    <small>contact:</small>
-                    <a href="https://www.github.com/sitstaycreate"><i class="fa fa-github-alt"></i></a>
+            <div class="card-body justify-content-center">
+                <div class="my-3">
+                    <p>
+                        SitStayCreate is an imperative to make something. At the intersection of diy audio and open-source software communities,
+                        it is a place to imagine not how things are, but how they might be.
+                    </p>
+                    <p>
+                        SitStayCreate was first envisioned in Austin, TX in 2018. We believe the average person has more than they need to
+                        make interesting instruments and compelling recordings at home. We hope to encourage others to explore the development of their
+                        own electronic instruments by sharing our projects.
+                    </p>
                 </div>
             </div>
-            <p></p>
         </div>
-    </footer>
-
-
     </body>
 </html>
