Fixed links in Max_Intro

--- a/Max_Intro.html
+++ b/Max_Intro.html
@@ -29,7 +29,7 @@
         
 
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="http://localhost:8080/ssc/">SitStayCreate</a>
+            <a class="navbar-brand" href="index.html">SitStayCreate</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,16 +38,13 @@
                 <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;about&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/about">About</a>
+                        <a class="nav-link" href="About.html">About</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;midiosc&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/documentation/midiosc">midiosc</a>
+                        <a class="nav-link" href="Midiosc.html">midiosc</a>
                     </li>
                     <li class="nav-item {{ &#39;active&#39; if active_page == &#39;max_projects&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/documentation">Max projects</a>
-                    </li>
-                    <li class="nav-item {{ &#39;active&#39; if active_page == &#39;links&#39; else &#39;&#39; }}">
-                        <a class="nav-link" href="http://localhost:8080/ssc/links">Links</a>
+                        <a class="nav-link" href="Max.html">Max projects</a>
                     </li>
                 </ul>
             </div>
@@ -94,8 +91,6 @@
                         a formidable combination for building a variety of tools.
                     </p>
 
-                    <!-- TODO: this might need to be moved somewhere else -->
-                    <script src="./Max+Intro_files/player.js.download"></script>
                     <p>
                         In older versions of Max, there was the programming environment and the runtime environment. In newer versions, these are both
                         the same thing, but there are limitations on saving and exporting patches like there were on the programming environment.
