update index and desktop
Small changes to html and css for mobile and desktop

--- a/desktop.html
+++ b/desktop.html
@@ -49,9 +49,6 @@
         </ol>
     </nav>
 
-    <div class="mx-5" id="title">
-        <h1 class="display-4 text-center">SitStayCreate - <small>DRD-01</small></h1>
-    </div>
     <div class="card mx-5 drd-01-synth" id="drd-01-synth-large">
         <div class="card-header bg-dark text-light" id="drd-01-params">
             <div class="MainPanel" id="MainPanel-large">
@@ -323,7 +320,7 @@
         </div>
     </div>
     <div class="mx-5" id="version-link">
-        <a href="index.html">mobile version</a>
+        <p>DRD-01 - <small><a href="index.html">mobile version</a></small></p>
     </div>
 </body>
 <footer>
