--- a/index.html
+++ b/index.html
@@ -48,22 +48,18 @@
             <li class="breadcrumb-item active" aria-current="page">Home</li>
         </ol>
     </nav>
-
-    <div class="mx-5" id="title">
-        <h1 class="display-5 text-center">SitStayCreate - <small>DRD-01</small></h1>
-    </div>
     <div class="card mx-5 drd-01-synth" id="drd-01-synth-small">
         <div class="card-header bg-dark text-light" id="drd-01-params">
             <div class="MainPanel" id="MainPanel-small">
                 <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
-                    <a class="nav-link active" id="pills-VoicesPanel-tab" data-toggle="pill" href="#VoicesPanel" role="tab" aria-controls="pills-VoicesPanel" aria-selected="true">Voices</a>
+                    <a class="nav-link active" id="pills-VoicesPanel-tab" data-toggle="pill" href="#VoicesPanel" role="tab" aria-controls="pills-VoicesPanel" aria-selected="true">Vox</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="pills-AmpPanel-tab" data-toggle="pill" href="#AmpPanel" role="tab" aria-controls="pills-AmpPanel" aria-selected="false">Amplifier</a>
+                    <a class="nav-link" id="pills-AmpPanel-tab" data-toggle="pill" href="#AmpPanel" role="tab" aria-controls="pills-AmpPanel" aria-selected="false">Amp</a>
                     </li>
                     <li class="nav-item" role="presentation">
-                    <a class="nav-link" id="pills-EffectsPanel-tab" data-toggle="pill" href="#EffectsPanel" role="tab" aria-controls="pills-EffectsPanel" aria-selected="false">Effects</a>
+                    <a class="nav-link" id="pills-EffectsPanel-tab" data-toggle="pill" href="#EffectsPanel" role="tab" aria-controls="pills-EffectsPanel" aria-selected="false">Fx</a>
                     </li>
                 </ul>
                 <div class="tab-content mt-3">
@@ -335,7 +331,7 @@
         </div>
     </div>
     <div class="mx-5" id="version-link">
-        <a href="desktop.html">desktop version</a>
+        <p>DRD-01 - <small><a href="desktop.html">desktop version</a></small></p>
     </div>
 </body>
 <footer>
