--- a/desktop.html
+++ b/desktop.html
@@ -318,7 +318,13 @@
                     </div>
                 </div>
                 <div class="card-body bg-warning text-light" id="touchstrip-panel">
-                    <div id="touchstrip"></div>
+                    <div id="touchstrip">
+                        <div id="touchstrip">
+                            <div class="mt-4" id="touchstrip-label0">Touchstrip Synth -
+                                click to play, drag mouse to change pitch
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="mx-5" id="version-link">
