--- a/index.html
+++ b/index.html
@@ -324,6 +324,8 @@
         </div>
         <div class="card-body bg-warning text-light" id="touchstrip-panel">
                 <div id="touchstrip">
+                    <div class="mt-3" id="touchstrip-label0">Touchstrip Synth</div>
+                    <div id="touchstrip-label1">click here to play</div>
                 </div>
         </div>
     </div>
@@ -333,6 +335,7 @@
 </body>
 <footer>
     <script src="./static/javascript/DRD-01/drd01.js"></script>
+    <script src="touchstriplabel.js"></script>
     <link rel="stylesheet" href="./static/css/DRD-01/DRD-01.css">
 </footer>
 </html>
