Updates to homepage
Nav-Pills changed to buttons, touchstrip-label changed so it can be hid

--- a/desktop.html
+++ b/desktop.html
@@ -321,7 +321,10 @@
                     <div id="touchstrip">
                         <div id="touchstrip">
                             <div class="mt-4" id="touchstrip-label0">Touchstrip Synth -
-                                click to play, drag mouse to change pitch
+
+                            </div>
+                            <div id="touchstrip-label1">
+                                Click to play, drag mouse to change pitch
                             </div>
                         </div>
                     </div>
